# cargo-image-runner

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: ci.yml
example/: Cargo.toml  README.md  build.rs  limine.cfg  limine.conf
example/.cargo/: config.toml  kernel.ld
example/src/: main.rs  serial.rs
examples/bios-limine-iso/: Cargo.toml  README.md
examples/extra-files/: Cargo.toml  README.md  boot-data.txt  limine.conf
examples/limine-directory/: Cargo.toml  README.md  limine.conf
examples/limine-fat/: Cargo.toml  README.md
examples/limine-iso/: Cargo.toml  README.md
examples/limine-iso/.cargo/: config.toml
examples/profiles/: Cargo.toml  README.md
examples/uefi-fat/: Cargo.toml  README.md
examples/uefi-simple/: Cargo.toml  README.md
src/: bootloader.rs  config.rs  iso.rs  lib.rs  main.rs
src/bootloader/: fetcher.rs  grub.rs  limine.rs  mod.rs  none.rs
src/config/: env.rs  loader.rs  mod.rs
src/core/: builder.rs  context.rs  error.rs  mod.rs
src/firmware/: mod.rs  ovmf.rs
src/harness/: formatter.rs  mod.rs  parser.rs
src/image/: directory.rs  fat.rs  iso.rs  mod.rs  template.rs
src/runner/: io.rs  mod.rs  qemu.rs
src/util/: fs.rs  hash.rs  mod.rs
test-limine/: Cargo.toml  limine.conf
test-limine/.cargo/: config.toml
test-limine/src/: main.rs
tests/: builder_pipeline.rs  config_integration.rs  standalone_usage.rs  template_integration.rs
