[package]
name = "cargo-image-runner"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A cargo subcommand that allows running kernels using cargo run"
repository = "https://github.com/hxyulin/cargo-image-runner"

[features]
default = ["bios", "uefi"]
# Enables the BIOS support
# If this feature is enabled, the image may be bigger
bios = []
# Enables the UEFI support
# If this feature is enabled, the OVMF image will be used as the qemu bios
# And the image is significantly bigger
uefi = ["dep:ovmf-prebuilt"]

[dependencies]
cargo_metadata = "0.18.1"
serde_json = "1.0.137"
serde = { version = "1.0.217", features = ["derive"] }
git2 = "0.20.0"
indicatif = "0.17.9"
ovmf-prebuilt = { version = "0.2.2", optional = true }
hadris-iso = "0.0.2"
