[package]
name = "example_kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
uart_16550 = { version = "0.3.2", features = ["nightly"] }

[package.metadata.image-runner]
# Limine branch to use
# You should be using the binary branch, and not the source branch
limine-branch = "v8.x-binary"

# The limine config file to use
# Note that this file can either be limine.cfg or limine.conf, depending on the limine version
config-file = "limine.conf"
# Extra files to copy, if you have modules, or any other files you want to include
extra-files = []

# The boot type to use
# You can use "bios" or "uefi"
# Feel free to change it to test out UEFI
boot-type = "bios"

# The exit code to use for successful tests
# You must set it to this for qemu to indicate success when testing
test-success-exit-code = 33

# Arguments to pass to qemu when testing
test-args = [
  "-device",
  "isa-debug-exit,iobase=0xf4,iosize=0x4",
  "-serial",
  "stdio",
  "-display",
  "none",
]

# Arguments to pass to qemu when running
run-args = ["-no-reboot", "-serial", "stdio"]

# variables here, we can use this customize what we can customize using the cli
vars = { machine = "q35" }

# The base run command to use
run-command = ["qemu-system-x86_64", "-cdrom", "{}", "-machine", "$machine"]
# We can specify the kernel command line here
# cmdline = "command line arguments..."
